# cifrar-chat

./: LICENSE  README.md
backend/: main.py  pyproject.toml
backend/src/: main.py
backend/src/core/: logging.py  settings.py
backend/src/db/: redis.py
backend/src/routes/: room_router.py
backend/src/schemas/: rooms.py
backend/src/services/: room_services.py
backend/src/templates/components/: features_cards.html  features_cards.jinja
backend/src/templates/layouts/: chat_layout.jinja  main_layout.html  main_layout.jinja
backend/src/templates/pages/: chat_window.jinja  createRoomForm.jinja  home_page.jinja  joinRoomForm.jinja
backend/src/templates/partials/: footer.html  footer.jinja  navbar.html  navbar.jinja
backend/src/templates/static/css/: chat_window.css  feature_card.css  main.css
backend/src/templates/static/js/: nav.js  websocket.js
backend/src/utils/: rooms_utils.py  websocketManager.py
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ExportFiles.js  Footer.jsx  NavBar.jsx  SocialLinks.jsx
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: CreateRoomFormPage.jsx  ExportFiles.js  FeatureSection.jsx  HomePage.jsx  JoinRoomFormPage.jsx
frontend/src/services/: ApiConfig.js  RoomService.js
frontend/src/utils/: SquareGradientEffect.js
